    TODO: Fix issue with generating icon from imageview on retina macs (IconFamily issue)
    TODO: Drop targets do not work with “Remain running after initial execution” off
    TODO: Make icon brighter?
    TODO: Get rid of crazy pattern where objects release themselves in the window controllers
    TODO: New high res images for documentation

    * The built-in editor has been much improved, with line numbering, configurable text size and no more annoying quote substitution issues
    * Migrated from UKKqueue to VDKQueue and got all file system watching working properly again
    * Uniform Type Identifiers (UTIs) are now supported in drop settings
    * More examples
    * Scripts can now send messages to Notification Center via the NOTIFICATION:* syntax
    * New help buttons in main window and drop settings
    * Previewing status item menu now shows actual script output instead of placeholder text
    * Status menu items can now only have a title or an icon, not both, due to changes in Mac OS X
    * Show Shell Command window now shows install status of command line tool
    * Got rid of old, low-resolution preset icons
    * New release build script
    * Built with XCode 7 and now requires Mac OS X 10.7 or later and a 64-bit Intel system. Older versions continue to work just fine on 32-bit 10.6 systems, and version 4.4 still works on PowerPC. But it's time to leave the past behind. It's been 9 years since the last 32-bit Mac was released.
    * Syntax checker window now shows the command invoked when checking script syntax
    * App size estimation is now more accurate
    * New contexual menu button for icon view
    * "Copy icon path" option in icon contextual menu
    * Modernization of some user interface elements
    * Proper icon temp file handling
    * New retina-quality default status menu icon
    * Fixed issue with Open... menu item and file types in ScriptExec
    * Font size in web output view can now also be increased/reduced